--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,13 +1,2 @@
 <h3 id="title">Welcome to Twitter</h3>
-
-      <div class='info'>
-        {{user.name}}
-      </div>
-<a class="twitter-timeline" href="https://twitter.com/DuhItsKirsten" data-widget-id="663572057737838592">Tweets by @DuhItsKirsten</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-<a class="twitter-share-button"
-  href="https://twitter.com/intent/tweet?text=Hello%20world"
-  data-size="large">
-Send A Tweet</a>
-      {{textarea value=newTweetText placeholder='Compose new Tweet...'}}
-      <button {{action 'createTweet' newTweetText}} type='button' class='btn btn-primary'><i class="fa fa-twitter fa-lg"></i> Tweet</button>
+{{outlet}}
